--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,6 @@
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
-		<div id="portal"></div>
+		<div id="portal" class="hide-for-tablet hide-for-laptop"></div>
 	</body>
 </html>
